--- a/server/.gitignore
+++ b/server/.gitignore
@@ -24,6 +24,7 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.session.sql
 
 # misc
 /.angular/cache
@@ -39,4 +40,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
