--- a/server/recipe-app/fly.toml
+++ b/server/recipe-app/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for green-meadow-159 on 2023-09-17T19:38:47+02:00
+# fly.toml app configuration file generated for wg-recipes on 2023-11-30T18:42:05+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "green-meadow-159"
+app = "wg-recipes"
 primary_region = "ams"
 
 [build]
@@ -15,3 +15,8 @@ primary_region = "ams"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
